tests/error/experimental_errors/list_literal.err
Error: Experimental feature (at $FILE:6:4)
  | 
4 | @guppy
5 | def main() -> None:
6 |     [1, 2, 3]
  |     ^^^^^^^^^ Lists are an experimental feature

Help: Experimental features are currently disabled. You can enable them by
calling `guppylang.enable_experimental_features()`, however note that these
features are unstable and might break in the future.

Help: Native Python lists are not supported here. Use `array` from
`guppylang.std.quantum` instead.

Guppy compilation failed due to 1 previous error
